@@ -7,6 +7,7 @@ import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.awt.event.MouseEvent;
 import java.awt.event.MouseMotionListener;
+import java.awt.geom.Rectangle2D;
 import java.awt.geom.RoundRectangle2D;
 import java.util.ArrayList;
 
@@ -173,6 +174,27 @@ public class GravityAndOrbitsCanvas extends PhetPCanvas {
 
         // shows the bounds of the "stage", which is different from the canvas
 //        addChild( new PhetPPath( new Rectangle2D.Double( 0, 0, STAGE_SIZE.width, STAGE_SIZE.height ), new BasicStroke( 1f ), Color.RED ) );
+
+        Rectangle2D stage = new Rectangle2D.Double( 0, 0, STAGE_SIZE.width, STAGE_SIZE.height );
+        for ( Body body : mode.getModel().getBodies() ) {
+            body.getBounds().setValue( mode.getModelViewTransformProperty().getValue().viewToModel( stage ) );
+        }
+        final MultiwayOr anythingReturnable = new MultiwayOr( new ArrayList<Property<Boolean>>() {{
+            for ( Body body : model.getBodies() ) {add( body.getReturnable() );}
+        }} );
+        addChild( new ButtonNode( "Return Object" ) {{
+            addActionListener( new ActionListener() {
+                public void actionPerformed( ActionEvent e ) {
+                    model.returnObjects();
+                }
+            } );
+            anythingReturnable.addObserver( new SimpleObserver() {
+                public void update() {
+                    setVisible( anythingReturnable.getValue() );
+                }
+            } );
+            setOffset( 100, 100 );
+        }} );
     }
 
     private Body getChild( Body parent, ArrayList<Body> bodies ) {
